--- a/week1/health-pricing/package.json
+++ b/week1/health-pricing/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^4.3.1",
     "core-js": "^3.1.3",
     "d3": "^5.9.2",
+    "d3-simple-slider": "^1.5.2",
     "data-forge": "^1.7.2",
     "data-forge-fs": "0.0.6",
     "dataframe-js": "git+https://github.com/Gmousse/dataframe-js.git",
@@ -14,6 +15,7 @@
     "papaparse": "^5.0.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
+    "react-bootstrap-table-next": "^3.1.5",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
