--- a/week1/health-pricing/package.json
+++ b/week1/health-pricing/package.json
@@ -5,14 +5,20 @@
   "dependencies": {
     "@babel/runtime-corejs2": "^7.4.5",
     "bootstrap": "^4.3.1",
+    "bs-stepper": "^1.7.0",
     "core-js": "^3.1.3",
     "d3": "^5.9.2",
     "d3-simple-slider": "^1.5.2",
     "data-forge": "^1.7.2",
     "data-forge-fs": "0.0.6",
     "dataframe-js": "git+https://github.com/Gmousse/dataframe-js.git",
+    "install": "^0.13.0",
     "materialize-css": "^1.0.0",
+    "mdbootstrap": "^4.8.7",
+    "mdbreact": "^4.18.1",
+    "npm": "^6.10.2",
     "papaparse": "^5.0.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.9",
     "react-bootstrap-table-next": "^3.1.5",
@@ -21,6 +27,8 @@
     "react-scripts": "3.0.1",
     "react-search-field": "^1.0.0",
     "react-select": "^3.0.4",
+    "react-stepper-horizontal": "^1.0.11",
+    "react-stepzilla": "^6.0.0",
     "typescript": "^3.5.1"
   },
   "scripts": {
