--- a/week1/health-pricing/package.json
+++ b/week1/health-pricing/package.json
@@ -13,9 +13,8 @@
     "data-forge-fs": "0.0.6",
     "dataframe-js": "git+https://github.com/Gmousse/dataframe-js.git",
     "install": "^0.13.0",
+    "jquery": "^3.4.1",
     "materialize-css": "^1.0.0",
-    "mdbootstrap": "^4.8.7",
-    "mdbreact": "^4.18.1",
     "npm": "^6.10.2",
     "papaparse": "^5.0.0",
     "prop-types": "^15.7.2",
