--- a/week1/health-pricing/package.json
+++ b/week1/health-pricing/package.json
@@ -12,6 +12,7 @@
     "data-forge": "^1.7.2",
     "data-forge-fs": "0.0.6",
     "dataframe-js": "git+https://github.com/Gmousse/dataframe-js.git",
+    "immutability-helper": "^3.0.1",
     "install": "^0.13.0",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0",
@@ -21,6 +22,7 @@
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-bootstrap-table-next": "^3.1.7",
+    "react-bootstrap-table2-paginator": "^2.0.7",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
